# WeCut

./: .env.example  .gitignore  Cargo.toml  README.md  agents.md  biome.json  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/CONTRIBUTING/: en-US.md  ja-JP.md  zh-CN.md  zh-TW.md
.github/ISSUE_TEMPLATE/: 01-bug.yml  11-bug.en-US.yml
.github/workflows/: beta_build.yml  release.yml
docs/plans/: 2026-04-16-screenshot-preview-export-architecture.md  2026-04-16-screenshot-preview-export-design.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  screenshot.rs
src-tauri/src/core/setup/: macos.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/plugins/active_app/: Cargo.toml  build.rs
src-tauri/src/plugins/active_app/src/: lib.rs
src-tauri/src/plugins/active_app/src/commands/: linux.rs  macos.rs  windows.rs
src-tauri/src/plugins/paste/src/: lib.rs
src-tauri/src/plugins/paste/src/commands/: linux.rs  macos.rs  windows.rs
src-tauri/src/plugins/text_expansion/: build.rs  commands.rs  listener.rs  matcher.rs  mod.rs
src-tauri/src/plugins/text_expansion/permissions/: default.toml
src-tauri/src/plugins/window/: Cargo.toml  build.rs
src-tauri/src/plugins/window/permissions/: default.toml
src-tauri/src/plugins/window/src/: lib.rs
src-tauri/src/plugins/window/src/commands/: macos.rs  mod.rs  not_macos.rs  onboarding.rs  send_modal.rs
src/assets/css/: global.scss
src/components/CreateTagModal/: index.tsx
src/components/LazyInput/: LazyPassword.tsx  LazyTextArea.tsx  index.tsx
src/components/PasteToast/: index.scss  index.tsx
src/components/Scrollbar/: index.tsx
src/components/TagSubMenu/: index.tsx
src/constants/: index.ts
src/contexts/: ShortcutContext.tsx
src/database/: history.ts  index.ts  tag.ts  textExpansion.ts
src/hooks/: useClipboard.ts  useContextMenu.tsx  useHistoryList.ts  usePasteToast.ts  useRegister.ts  useShortcutManager.ts  useTauriListen.ts  useTray.ts  useWindowState.ts
src/locales/: en-US.json  ja-JP.json  zh-CN.json  zh-TW.json
src/pages/Main/: index.tsx
src/pages/Main/components/DockMode/: index.tsx
src/pages/Main/components/GroupList/: index.tsx
src/pages/Main/components/HistoryList/: index.tsx
src/pages/Onboarding/: index.tsx
src/pages/PinViewer/: index.tsx
src/pages/Preference/: index.tsx
src/pages/Preference/components/About/: index.tsx
src/pages/Preference/components/AiSend/: index.tsx
src/pages/Preference/components/Clipboard/: index.tsx
src/pages/Preference/components/General/: index.tsx
src/pages/Preference/components/Privacy/: index.tsx
src/pages/Preference/components/Screenshot/: index.tsx
src/pages/Preference/components/Shortcut/: index.tsx
src/pages/Preference/components/TagManager/: index.tsx
src/pages/Preference/components/TextExpansion/: index.module.scss  index.tsx
src/pages/Screenshot/: index.tsx
src/pages/Screenshot/components/Editor/: MiniButton.tsx  OcrOverlay.tsx  (+8 more)
src/pages/Screenshot/hooks/: useScreenshot.ts
src/pages/Screenshot/utils/: editor-transition.ts  session-contract.ts
src/pages/SendModal/: index.scss  index.tsx
src/pages/Toast/: index.scss  index.tsx
src/plugins/: active-app.ts  clipboard.ts  paste.ts  sendModal.ts  textExpansion.ts  window-layout.test.ts  window-layout.ts  window.ts
src/router/: index.ts
src/stores/: clipboard.ts  global.ts  textExpansion.ts
src/types/: database.d.ts  store.d.ts
src/utils/: canvas-hidpi.test.ts  canvas-hidpi.ts  clipboardLock.ts  dedup.test.ts  dedup.ts  dockAction.test.ts  dockAction.ts  envConfig.ts  historyActivation.test.ts  historyActivation.ts  is.ts  path.ts  perf-log.ts  screenshot-editor-transition.test.ts  screenshot-image-source-rect.test.ts  screenshot-monitor.test.ts  screenshot-monitor.ts  screenshot-session-contract.test.ts  screenshot-toolbar-position.test.ts  screenshot-trigger.ts  send.ts  shortcut.ts  store.ts  windowState.ts
(+26 files in other folders)
