[workspace]
resolver="2"
members = [
    "src-tauri"
]

[workspace.dependencies]
tauri = "2" 
serde = "1"
serde_json = "1"
fs_extra = "1"
log = ">=0.4, <1"
cocoa = ">=0.25, <1"
tauri-plugin-fs-pro = "2"
tauri-plugin = { version = "2", features = ["build"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
tauri-plugin-eco-window = { path = "./src-tauri/src/plugins/window" }
tauri-plugin-eco-paste = { path = "./src-tauri/src/plugins/paste" }
tauri-plugin-eco-autostart = { path = "./src-tauri/src/plugins/autostart" }
tauri-plugin-eco-active-app = { path = "./src-tauri/src/plugins/active_app" }
# 在 debug 模式下对图像处理库开启优化，避免截图编码极慢（3456x2234 图片需要几秒）
[profile.dev.package.image]
opt-level = 3

[profile.dev.package.xcap]
opt-level = 3

[profile.dev.package.zune-jpeg]
opt-level = 3

[profile.dev.package.zune-core]
opt-level = 3

# 对自己的 crate 也开启优化（rgba->rgb 转换和 jpeg 编码在 debug 模式下极慢）
[profile.dev.package.WeCut]
opt-level = 3
