[package]
name = "WeCut"
version = "0.0.1"
description = "一款开源的跨平台剪贴板管理工具"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "eco_paste_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { workspace = true, features = ["tray-icon", "protocol-asset", "macos-private-api", "image-ico"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
log.workspace = true
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"   
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-macos-permissions = "2"
tauri-plugin-locale = "2"
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-prevent-default = "1"
tauri-plugin-clipboard-x = "2"
reqwest = { version = "0.12", features = ["multipart"] }
urlencoding = "2"
tokio = { version = "1", features = ["fs"] }
xcap = "0.9.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"
clipboard-rs = "0.2"
tauri-plugin-fs-pro.workspace = true
tauri-plugin-eco-window.workspace = true
tauri-plugin-eco-paste.workspace = true
tauri-plugin-eco-autostart.workspace = true
tauri-plugin-eco-active-app.workspace = true

[target."cfg(target_os = \"macos\")".dependencies]
tauri-nspanel.workspace = true
core-graphics = { version = "0.24", features = ["highsierra"] }
core-foundation = "0.10"
foreign-types-shared = "0.3"
cocoa = "0.26"

[target."cfg(target_os = \"windows\")".dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_DataExchange", "Win32_System_Memory"] }

[features]
cargo-clippy = []
